objective objects objecting to objectification

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
     "scene.h": "c",
     "string.h": "c",
     "xlocale": "c",
-    "shared.h": "c"
+    "shared.h": "c",
+    "actors.h": "c"
 }
 }
