--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
     "system.h": "c",
     "gm_game.h": "c",
     "gm_title.h": "c",
-    "transition.h": "c"
+    "transition.h": "c",
+    "room.h": "c"
 }
 }
